# py-zipfile-extra-decoding

./: .pre-commit-config.yaml  README.md  pyproject.toml
test/test_zip_dir/the_question/: the_answer.txt
test/zipfile_extra_info/: test_ZipInfo.py
zipfile_extra_info/: ZipInfo.py  __init__.py  zipfile_local_headers.py  zipinfo_extra_info.py
zipfile_extra_info/tools/: dump_extra_info.py
